--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <div class="loader"><span></span></div>
+    <div class="loader">
+        <span></span></div>
 </body>
 
 </html>
