--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="loader">
-        <span style="--i:1"></span>
+        <span style="--i:1;"></span>
     </div>
 </body>
 
