--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="loader">
         <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
     </div>
 </body>
 
