--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="loader">
         <span style="--i:1;"></span>
         <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
     </div>
 </body>
 
