--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <span style="--i:1;"></span>
         <span style="--i:1;"></span>
         <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
     </div>
 </body>
 
