--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <span style="--i:1;"></span>
         <span style="--i:1;"></span>
         <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
     </div>
 </body>
 
